--- a/Bio.html
+++ b/Bio.html
@@ -4,12 +4,13 @@
 <head>
   <meta charset="UTF-8"> 
   <title>Example</title>
-  <link rel="stylesheet" type="text/css" href="" />
+  <link rel="stylesheet" type="text/css" href="style.css" />
 
 </head>
 
 <body>
   <!-- cnt -->
+   <section class="Bio"> 
     <h1>Student Bio</h1>
     <br>
     <h2>Yash Kinarwiala</h2>
@@ -18,13 +19,15 @@
     <br>
     <p>Hi, My name is yash and this my profile ...</p><a href="https://www.google.com/" target="_blank" >Link To Profile</a> 
     <br>
+  </section>
+  <section class="Contact">
     <h2>Contact Info</h2>
     <ul>
         <li>Email- yashkinariwalask95@gmail.com</li>
         <li>Github- yashsk95</li>
         <li>Contact- 678-697-8718</li>
     </ul>
-
+  </section>
 </body>
 
 </html>
